--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -19,5 +19,5 @@
   <div class="item" data-percent="0"   data-value="ja"    data-english="Japanese">日本語</div>
   <div class="item" data-percent="0"   data-value="kr"    data-english="Korean">한국어</div>
   <div class="item" data-percent="0"   data-value="it"    data-english="Italian">Italiano</div>
-  <div class="item" data-precent="0"   data-value="pl"    data-englihs="Polish">polski</div>
+  <div class="item" data-precent="0"   data-value="pl"    data-english="Polish">polski</div>
 </div>
