Adds inverted input, css loaders for inputs

--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -611,6 +611,10 @@
   padding-top: 0;
 }
 
+/*--------------
+    Following
+---------------*/
+
 #example.index .following.bar {
   position: absolute;
   top: 0px;
