--- a/server/partials/examples/accordion.html
+++ b/server/partials/examples/accordion.html
@@ -1,4 +1,4 @@
-<div class="ui vertical fluid accordion menu">
+<div class="ui vertical accordion menu">
   <div class="item">
     <a class="active title">
       <i class="dropdown icon"></i>
