--- a/server/partials/examples/divider.html
+++ b/server/partials/examples/divider.html
@@ -3,6 +3,7 @@
   <div class="ui horizontal divider">and</div>
   <div class="teal ui button">B</div>
 </div>
+
 <div class="ui two column stackable center aligned grid segment">
   <div class="column">
     <div class="ui button">A</div>
@@ -11,4 +12,19 @@
   <div class="column">
     <div class="teal ui button">B</div>
   </div>
+</div>
+
+<h4 class="ui horizontal divider">
+  <i class="heart icon"></i>
+</h4>
+
+<h4 class="ui horizontal header divider">
+  <i class="bar chart icon"></i>
+  Specifications
+</h4>
+
+<div class="ui inverted segment">
+  <p>A</p>
+  <div class="ui inverted divider"></div>
+  <p>B</p>
 </div>
