--- a/server/partials/examples/dropdown.html
+++ b/server/partials/examples/dropdown.html
@@ -1,10 +1,10 @@
-<div class="ui fluid search selection dropdown">
+<div class="ui search selection dropdown">
   <input type="hidden" name="country">
   <i class="dropdown icon"></i>
   <div class="default text">Select country</div>
   <div class="menu">
     <div data-value="ad" class="item"><i class="ad flag"></i>Andorra</div>
-    <div data-value="ae" class="item"><i class="ae flag"></i>United Arab Emirates</div>
+    <div data-value="ae" class="item"><i class="ae flag"></i>U.A.E</div>
     <div data-value="af" class="item"><i class="af flag"></i>Afghanistan</div>
     <div data-value="ag" class="item"><i class="ag flag"></i>Antigua</div>
     <div data-value="ai" class="item"><i class="ai flag"></i>Anguilla</div>
