--- a/server/partials/examples/label.html
+++ b/server/partials/examples/label.html
@@ -13,7 +13,7 @@
 <a class="ui tag label">Tag</a>
 
 <div class="ui hidden divider"></div>
-<div class="ui two item fluid menu">
+<div class="ui two item menu">
   <a class="item">
     Item
     <div class="floating ui label">2</div>
