--- a/server/partials/examples/step.html
+++ b/server/partials/examples/step.html
@@ -1,4 +1,4 @@
-<div class="ui fluid steps">
+<div class="ui steps">
   <a class="step">
     <div class="content">
       <div class="title">Step</div>
@@ -13,7 +13,7 @@
   </a>
 </div>
 <div class="ui hidden divider"></div>
-<div class="ui fluid fluid ordered vertical steps">
+<div class="ui ordered vertical steps">
   <a class="step">
     <div class="content">
       <div class="title">Previous Step</div>
@@ -36,8 +36,8 @@
 
 <div class="ui hidden divider"></div>
 
-<div class="ui fluid vertical steps">
-  <a class="step">
+<div class="ui vertical steps">
+  <a class="completed step">
     <i class="truck icon"></i>
     <div class="content">
       <div class="title">Previous Step</div>
