--- a/server/partials/examples/menu.html
+++ b/server/partials/examples/menu.html
@@ -1,4 +1,4 @@
-<div class="ui vertical demo fluid menu">
+<div class="ui vertical demo menu">
   <a class="active item">
     A
   </a>
@@ -6,7 +6,7 @@
     B
   </a>
 </div>
-<div class="ui vertical demo fluid menu">
+<div class="ui vertical demo menu">
   <a class="active teal item">
     A
   </a>
@@ -21,7 +21,7 @@
     </div>
   </div>
 </div>
-<div class="ui fluid tabular menu">
+<div class="ui tabular menu">
   <a class="active item">
     Tab
   </a>
@@ -29,7 +29,7 @@
     Tab
   </a>
 </div>
-<div class="ui secondary vertical demo fluid menu">
+<div class="ui secondary vertical demo menu">
   <a class="active item">
     A
   </a>
@@ -40,7 +40,7 @@
     C
   </a>
 </div>
-<div class="ui secondary pointing vertical demo fluid menu">
+<div class="ui secondary pointing vertical demo menu">
   <a class="active item">
     A
   </a>
