--- a/server/partials/examples/divider.html
+++ b/server/partials/examples/divider.html
@@ -14,14 +14,14 @@
   </div>
 </div>
 
-<h4 class="ui horizontal divider">
+<div class="ui horizontal divider">
   <i class="heart icon"></i>
-</h4>
+</div>
 
-<h4 class="ui horizontal header divider">
+<h5 class="ui horizontal header divider">
   <i class="bar chart icon"></i>
   Specifications
-</h4>
+</h5>
 
 <div class="ui inverted segment">
   <p>A</p>
