--- a/server/partials/examples/header.html
+++ b/server/partials/examples/header.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="ui red dividing header">
+    <div class="ui teal dividing header">
       <i class="settings icon"></i>
       <div class="content">
         Color
